<?xml version="1.0" encoding="utf-8"?>

<!--
    File: add_item.xml
    Description: Add item widget/card that pops up when the add item button is clicked.
    Author: Aaditya Fadnavis
    Date: May 18, 2026

    Details: User must enter name and quantity for the item.
    Item name now only allows maximum 30 characters.
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <!-- Add Item Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@color/white">

            <!-- Add New Inventory Item (Title) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_inventory_item"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:layout_marginBottom="16dp"/>

            <!-- Item Name (Wrapper Layout) -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="@color/white">

                <!-- Item Name (Input Field) -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textColor="@color/dark_blue"
                    android:textColorHint="@color/grey"
                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Quantity (Wrapper Layout) -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="@color/white">

                <!-- Quantity (Input Field) -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_item_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_blue"
                    android:textColorHint="@color/grey"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Save to Inventory (Button) -->
            <Button
                android:id="@+id/btn_save_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_to_inventory"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/dark_blue"
                android:textColor="@color/light_white"
                app:cornerRadius="20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
