<?xml version="1.0" encoding="utf-8"?>

<!--
    File: inventory_activity.xml
    Description: Inventory home page through which users can access, view, and modify saved items.
    Author: Aaditya Fadnavis
    Date: May 19, 2026
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white">

    <!-- Current Inventory (Title Header) -->
    <TextView
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:paddingStart="16dp"
        android:paddingTop="60dp"
        android:paddingEnd="16dp"
        android:paddingBottom="24dp"
        android:text="@string/current_inventory"
        android:textColor="@color/light_white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- SMS Notification Switch (Low Inventory) -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sms_permission_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/sms_message"
        android:textSize="16sp"
        android:thumbTint="@color/dark_blue"
        android:trackTint="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- White card on background for organization and visual clarity -->
    <androidx.cardview.widget.CardView
        android:id="@+id/inventory_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="12dp"
        app:cardBackgroundColor="@color/blue_white"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/sms_permission_switch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Recycler View for holding items (Scrollable) -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inventory_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

    </androidx.cardview.widget.CardView>

    <!-- Add Item Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_item_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:contentDescription="@string/add_new_item"
        app:backgroundTint="@color/dark_blue"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/light_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>